--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Martin Trapp
 subtitle: in between worlds
 ---
 
-    <p>I'm a PhD student working on Sum-Product Networks and Bayesian nonparametrics with applications to cognitive sciences and natural language processing. My associaton is with the <a href="http://ofai.at">Austrian Research Institute for Artificial Intelligence (OFAI)</a> in Vienna and the <a href="http://www.tugraz.at">Graz University of Technology</a>. I'm supervised by the head of the OFAI Prof. em. Robert Trappl and by Assoc. Prof. Franz Pernkopf from the Laboratory of Signal Processing and Speech Communication, Graz University of Technology.
+    <p>I'm a PhD student working on Sum-Product Networks and Bayesian nonparametrics with applications to cognitive sciences and natural language processing. My association is with the <a href="http://ofai.at">Austrian Research Institute for Artificial Intelligence (OFAI)</a> in Vienna and the <a href="http://www.tugraz.at">Graz University of Technology</a>. I'm supervised by the head of the OFAI Prof. em. Robert Trappl and by Assoc. Prof. Franz Pernkopf from the Laboratory of Signal Processing and Speech Communication, Graz University of Technology.
 </br>
 Previously, I have been working as a researcher in medical and biological image processing at the <a href="http://vrvis.at">VRVis Research Center for Virtual Reality and Visualisation</a> and have conducted my Masters thesis at the <a href="https://www.tuwien.ac.at">Vienna University of Technology</a> on Fast and Accurate Automatic Localization of Anatomical Landmarks on Medical Images.
 	</p>
